--- a/skill-tree.html
+++ b/skill-tree.html
@@ -2,11 +2,14 @@
 layout: default
 ---
 
+{% capture title %}{% t skill_tree.title %}{% endcapture %}
+{% capture subtitle %}{% t skill_tree.subtitle %}{% endcapture %}
+
 {%
   include introduction.html
     theme="link"
-    title="Skill Tree"
-    subtitle="This page will show all skills and it's subtopics."
+    title=title
+    subtitle=subtitle
 %}
 
 {% include skill-tree.html %}
