--- a/mentorship.html
+++ b/mentorship.html
@@ -18,8 +18,8 @@ layout: default
 
     <div class="mentorship-lists-section-group mentorship-tree-element">
       <div class="mentorship-lists-tree-categories">
-        {% capture portuguese %}{% t mentorship.languages.portuguese %}{% endcapture %}
-        {% capture english %}{% t mentorship.languages.english %}{% endcapture %}
+        {% capture portuguese %}{% t global.languages.portuguese %}{% endcapture %}
+        {% capture english %}{% t global.languages.english %}{% endcapture %}
 
         {% include components/mentorship-item.html item=portuguese %}
         {% include components/mentorship-item.html item=english %}
