Change images dir

--- a/mentorship/logica-de-programaca-com-js.html
+++ b/mentorship/logica-de-programaca-com-js.html
@@ -50,13 +50,13 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example01_Girl01" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48 is-mirrored">
-          <img src="/assets/images/mentorship/person-female-01.webp" />
+          <img src="/assets/mentorship/person-female-01.png" />
         </figure>
       </div>
 
       <div id="example01_Girl02" class="has-popup-label is-flex-container to-right">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-female-03.webp" />
+          <img src="/assets/mentorship/person-female-03.png" />
         </figure>
       </div>
     </div>
@@ -101,25 +101,25 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example02_Boy01" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48 is-mirrored">
-          <img src="/assets/images/mentorship/person-male-01.webp" />
+          <img src="/assets/mentorship/person-male-01.png" />
         </figure>
       </div>
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/disfarce-01.webp" />
+          <img src="/assets/mentorship/disfarce-01.png" />
         </figure>
       </div>
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/disfarce-01.webp" />
+          <img src="/assets/mentorship/disfarce-01.png" />
         </figure>
       </div>
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/disfarce-01.webp" />
+          <img src="/assets/mentorship/disfarce-01.png" />
         </figure>
       </div>
     </div>
@@ -200,7 +200,7 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example03_Boy01" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-male-02.webp" />
+          <img src="/assets/mentorship/person-male-02.png" />
         </figure>
 
         <pre class="codigo">0001</pre>
@@ -208,7 +208,7 @@ layout: mentorship
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-female-02.webp" />
+          <img src="/assets/mentorship/person-female-02.png" />
         </figure>
 
         <pre class="codigo">0002</pre>
@@ -216,7 +216,7 @@ layout: mentorship
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-female-04.webp" />
+          <img src="/assets/mentorship/person-female-04.png" />
         </figure>
 
         <pre class="codigo">0003</pre>
@@ -266,13 +266,13 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example04_Boy01" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-male-03.webp" />
+          <img src="/assets/mentorship/person-male-03.png" />
         </figure>
       </div>
 
       <div id="example04_Boy02" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-male-04.webp" />
+          <img src="/assets/mentorship/person-male-04.png" />
         </figure>
       </div>
     </div>
@@ -364,19 +364,19 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example05_Boy01" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-male-04.webp" />
+          <img src="/assets/mentorship/person-male-04.png" />
         </figure>
       </div>
 
       <div id="example05_Girl01" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-female-03.webp" />
+          <img src="/assets/mentorship/person-female-03.png" />
         </figure>
       </div>
 
       <div id="example05_Girl02" class="has-popup-label is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/assets/images/mentorship/person-female-01.webp" />
+          <img src="/assets/mentorship/person-female-01.png" />
         </figure>
       </div>
     </div>
