Add lessons to mentorship

--- a/_mentorship/logica-de-programaca-com-js.html
+++ b/_mentorship/logica-de-programaca-com-js.html
@@ -1,15 +1,9 @@
 ---
 layout: mentorship
+title: Lógica de programação com JavaScript
+subtitle: Vamos aprender alguns conceitos base da programação utilizando javascript
+type: game
 ---
-
-{% include introduction.html
-    theme="link"
-    title="Lógica de programação com JavaScript"
-    subtitle="Vamos aprender alguns conceitos base da programação utilizando javascript"
-    class="has-background is-mini bg-mentorship typewriter"
-%}
-
-<br />
 
 <h3 class="title is-3"> 01 - Declarando variáveis </h3>
 
