Revision 02 - Golang Mentorship

--- a/mentorship.html
+++ b/mentorship.html
@@ -138,7 +138,7 @@ layout: default
       {% t mentorship.contact.subtitle %} <br />
     </h2>
 
-    <button class="button is-primary is-outlined is-medium is-fullwidth" onclick="mailMe()">
+    <button class="button is-primary is-outlined is-medium is-fullwidth" onclick="mailMe('{{site.email}}')">
       {% t mentorship.contact.contact_me %}
     </button>
   </div>
