--- a/public/old/mentorship/lesson-07-expanding-the-front-end.html
+++ b/public/old/mentorship/lesson-07-expanding-the-front-end.html
@@ -17,7 +17,7 @@
     <meta name="language" content="en,pt" />
     <meta name="robots" content="index,follow" />
     <meta name="theme-color" content="" />
-    <link rel="apple-touch-icon" href="/old/images/logo-hex.webp" />
+    <link rel="apple-touch-icon" href="/old/assets/images/logo-hex.webp" />
     <meta
       property="og:image"
       content="http://joaomarcuslf.com/images/logo-hex.webp"
@@ -37,7 +37,7 @@
       rel="alternate"
       type="application/rss+xml"
       title="Golang 07 - Expandindo o Front-end - Expectativas "
-      href="/old/feed.xml"
+      href="/old/assets/feed.xml"
     />
     <meta
       name="keywords"
@@ -54,16 +54,16 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@" />
     <meta name="twitter:creator" content="@joaomarcuslf" />
-    <link rel="stylesheet" type="text/css" href="/old/css/vendors.css" />
-    <link rel="stylesheet" type="text/css" href="/old/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/old/css/mentorship.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css/vendors.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css/mentorship.css" />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="@joaomarcuslf.com - Full-stack Software engineer - I'm Software Engineer since 2015 with great expertise in Front-end development. I like to teach a lot, and write some posts, you can check more here."
-      href="/old/feed.xml"
+      href="/old/assets/feed.xml"
     />
-    <link rel="stylesheet" type="text/css" href="/old/css/hljs.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css/hljs.css" />
   </head>
   <body>
     <div id="main" role="main" class="main">
@@ -2195,42 +2195,42 @@
               <h2 id="lista-de-aulas">Lista de aulas:</h2>
               <ul>
                 <li>
-                  <a href="/old/old/mentorship/lesson-00-getting-started"
+                  <a href="/old/assets/old/mentorship/lesson-00-getting-started"
                     >Golang 00 - Primeiros passos</a
                   >
                 </li>
                 <li>
-                  <a href="/old/old/mentorship/lesson-01-creating-app"
+                  <a href="/old/assets/old/mentorship/lesson-01-creating-app"
                     >Golang 01- Criando nosso App</a
                   >
                 </li>
                 <li>
-                  <a href="/old/old/mentorship/lesson-02-refactoring"
+                  <a href="/old/assets/old/mentorship/lesson-02-refactoring"
                     >Golang 02 - Refatorando nossos serviços</a
                   >
                 </li>
                 <li>
-                  <a href="/old/old/mentorship/lesson-03-web-server"
+                  <a href="/old/assets/old/mentorship/lesson-03-web-server"
                     >Golang 03 - Adicionando nosso servidor</a
                   >
                 </li>
                 <li>
-                  <a href="/old/old/mentorship/lesson-04-generate-qr"
+                  <a href="/old/assets/old/mentorship/lesson-04-generate-qr"
                     >Golang 04 - Adicionando rota geradora</a
                   >
                 </li>
                 <li>
-                  <a href="/old/old/mentorship/lesson-05-add-api"
+                  <a href="/old/assets/old/mentorship/lesson-05-add-api"
                     >Golang 05 - Adicionando nossa API</a
                   >
                 </li>
                 <li>
-                  <a href="/old/old/mentorship/lesson-06-consuming-api"
+                  <a href="/old/assets/old/mentorship/lesson-06-consuming-api"
                     >Golang 06 - Consumindo API</a
                   >
                 </li>
                 <li>
-                  <a href="/old/old/mentorship/lesson-07-expanding-the-front-end"
+                  <a href="/old/assets/old/mentorship/lesson-07-expanding-the-front-end"
                     >Golang 07 - Expandindo o Front-end</a
                   >
                 </li>
@@ -2245,10 +2245,10 @@
         </article>
       </div>
     </div>
-    <script src="/old/js/vendors/highlight.min.js"></script>
-    <script src="/old/js/base.js"></script>
-    <script src="/old/js/post-page.js"></script>
-    <script src="/old/js/hljs.js"></script>
-    <script src="/old/js/mentorship.js"></script>
+    <script src="/old/assets/js/vendors/highlight.min.js"></script>
+    <script src="/old/assets/js/base.js"></script>
+    <script src="/old/assets/js/post-page.js"></script>
+    <script src="/old/assets/js/hljs.js"></script>
+    <script src="/old/assets/js/mentorship.js"></script>
   </body>
 </html>
