Add old content

--- a/public/old/mentorship/lesson-01-flexbox.html
+++ b/public/old/mentorship/lesson-01-flexbox.html
@@ -46,16 +46,11 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@" />
     <meta name="twitter:creator" content="@joaomarcuslf" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/vendors.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/mentorship.css" />
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title="@joaomarcuslf.com - Full-stack Software engineer - I'm Software Engineer since 2015 with great expertise in Front-end development. I like to teach a lot, and write some posts, you can check more here."
-      href="/feed.xml"
-    />
-    <link rel="stylesheet" type="text/css" href="/assets/css/hljs.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//vendors.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//style.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//mentorship.css" />
+
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//hljs.css" />
   </head>
   <body>
     <div id="main" role="main" class="main">
@@ -292,10 +287,10 @@ textarea, time, tt, var
         </article>
       </div>
     </div>
-    <script src="/assets/js/vendors/highlight.min.js"></script>
-    <script src="/assets/js/base.js"></script>
-    <script src="/assets/js/post-page.js"></script>
-    <script src="/assets/js/hljs.js"></script>
-    <script src="/assets/js/mentorship.js"></script>
+    <script src="/old/assets/js/vendors/highlight.min.js"></script>
+    <script src="/old/assets/js/base.js"></script>
+    <script src="/old/assets/js/post-page.js"></script>
+    <script src="/old/assets/js/hljs.js"></script>
+    <script src="/old/assets/js/mentorship.js"></script>
   </body>
 </html>
