--- a/public/old/mentorship/lesson-05-add-api.html
+++ b/public/old/mentorship/lesson-05-add-api.html
@@ -51,16 +51,11 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@" />
     <meta name="twitter:creator" content="@joaomarcuslf" />
-    <link rel="stylesheet" type="text/css" href="/css/vendors.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/css/mentorship.css" />
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title="@joaomarcuslf.com - Full-stack Software engineer - I'm Software Engineer since 2015 with great expertise in Front-end development. I like to teach a lot, and write some posts, you can check more here."
-      href="/feed.xml"
-    />
-    <link rel="stylesheet" type="text/css" href="/css/hljs.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//vendors.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//style.css" />
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//mentorship.css" />
+
+    <link rel="stylesheet" type="text/css" href="/old/assets/css//hljs.css" />
   </head>
   <body>
     <div id="main" role="main" class="main">
@@ -1688,10 +1683,10 @@
         </article>
       </div>
     </div>
-    <script src="/js/vendors/highlight.min.js"></script>
-    <script src="/js/base.js"></script>
-    <script src="/js/post-page.js"></script>
-    <script src="/js/hljs.js"></script>
-    <script src="/js/mentorship.js"></script>
+    <script src="/old/assets/js/vendors/highlight.min.js"></script>
+    <script src="/old/assets/js/base.js"></script>
+    <script src="/old/assets/js/post-page.js"></script>
+    <script src="/old/assets/js/hljs.js"></script>
+    <script src="/old/assets/js/mentorship.js"></script>
   </body>
 </html>
