Add old content

--- a/public/old/mentorship/lesson-01-flexbox.html
+++ b/public/old/mentorship/lesson-01-flexbox.html
@@ -15,10 +15,10 @@
     <meta name="language" content="en,pt" />
     <meta name="robots" content="index,follow" />
     <meta name="theme-color" content="" />
-    <link rel="apple-touch-icon" href="/assets/images/logo-hex.webp" />
+    <link rel="apple-touch-icon" href="/old/assets/images/logo-hex.webp" />
     <meta
       property="og:image"
-      content="http://joaomarcuslf.com/assets/images/logo-hex.webp"
+      content="http://joaomarcuslf.com/old/assets/images/logo-hex.webp"
     />
     <meta property="og:title" content="HTML 01 - Encaixando na tela" />
     <meta property="twitter:title" content="HTML 01 - Encaixando na tela" />
@@ -93,7 +93,7 @@
                 mostrar textos, parágrafos, links e imagens.
               </p>
               <div class="is-flex-container to-center">
-                <img src="/assets/mentorship/grid-elements.png" />
+                <img src="/old/assets/mentorship/grid-elements.png" />
               </div>
               <p>
                 <br />
@@ -217,7 +217,7 @@ textarea, time, tt, var
   </code>
 </pre>
               <div class="is-flex-container to-center">
-                <img src="/assets/mentorship/grid-flex.png" />
+                <img src="/old/assets/mentorship/grid-flex.png" />
               </div>
               <h2 id="indo-além">Indo além</h2>
               <p>
@@ -279,7 +279,7 @@ textarea, time, tt, var
               <div class="is-flex-container to-center">
                 <img
                   class="border-1-dark is-fullwidth"
-                  src="/assets/mentorship/template-example.png"
+                  src="/old/assets/mentorship/template-example.png"
                 />
               </div>
             </div>
