--- a/public/old/mentorship/lesson-02-media-query.html
+++ b/public/old/mentorship/lesson-02-media-query.html
@@ -17,10 +17,10 @@
     <meta name="language" content="en,pt" />
     <meta name="robots" content="index,follow" />
     <meta name="theme-color" content="" />
-    <link rel="apple-touch-icon" href="/assets/images/logo-hex.webp" />
+    <link rel="apple-touch-icon" href="/old/assets/images/logo-hex.webp" />
     <meta
       property="og:image"
-      content="http://joaomarcuslf.com/assets/images/logo-hex.webp"
+      content="http://joaomarcuslf.com/old/assets/images/logo-hex.webp"
     />
     <meta property="og:title" content="HTML 02 - Utilizando media-query" />
     <meta property="twitter:title" content="HTML 02 - Utilizando media-query" />
@@ -78,7 +78,7 @@
               <div class="is-flex-container to-center">
                 <img
                   class="is-fullwidth"
-                  src="/assets/mentorship/retrospective.png"
+                  src="/old/assets/mentorship/retrospective.png"
                 />
               </div>
               <h2 id="retrospectiva">Retrospectiva</h2>
@@ -97,7 +97,7 @@
                 <li>E por fim começamos a fazer seu site.</li>
               </ul>
               <div class="is-flex-container to-center">
-                <img class="is-fullwidth" src="/assets/mentorship/froggy.png" />
+                <img class="is-fullwidth" src="/old/assets/mentorship/froggy.png" />
               </div>
               <h2 id="qual-o-objetivo-final-dessa-aula">
                 Qual o objetivo final dessa aula?
@@ -105,14 +105,14 @@
               <div class="is-flex-container to-center">
                 <img
                   class="is-fullwidth"
-                  src="/assets/mentorship/menu-mobile-desktop.png"
+                  src="/old/assets/mentorship/menu-mobile-desktop.png"
                 />
               </div>
               <h2 id="vamos-falar-sobre-nomenclatura">
                 Vamos falar sobre nomenclatura?
               </h2>
               <div class="is-flex-container to-center">
-                <img src="/assets/mentorship/measuring-screen.png" />
+                <img src="/old/assets/mentorship/measuring-screen.png" />
               </div>
               <p>
                 Vamos combinar alguns termos que eu vou utilizar nessa e em
@@ -142,7 +142,7 @@
               </ul>
               <p>Você pode guardar essa imagem como referência:</p>
               <div class="is-flex-container to-center">
-                <img src="/assets/mentorship/display-reference.png" />
+                <img src="/old/assets/mentorship/display-reference.png" />
               </div>
               <h2 id="okay-mas-para-quê-eu-preciso-disso-tudo">
                 Okay, mas para quê eu preciso disso tudo?
@@ -225,7 +225,7 @@
                 <li>Procure esse símbolo:</li>
               </ol>
               <div class="is-flex-container to-center">
-                <img src="/assets/mentorship/responsive-guide-01.png" />
+                <img src="/old/assets/mentorship/responsive-guide-01.png" />
               </div>
               <p>
                 <br />
@@ -267,7 +267,7 @@
               <div class="is-flex-container to-center">
                 <img
                   class="is-fullwidth"
-                  src="/assets/mentorship/section-site-01.png"
+                  src="/old/assets/mentorship/section-site-01.png"
                 />
               </div>
               <p>Vamos começar a preparar a primeira sessão do seu site.</p>
