Replace old e-mail

--- a/public/resume.html
+++ b/public/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+contact@joaomarcuslf.com<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Resume – João Marcus de Lemos Fernandes</title>
