Fix weird email replace

--- a/public/old/mentorship/lesson-05-add-api.html
+++ b/public/old/mentorship/lesson-05-add-api.html
@@ -1,4 +1,4 @@
-contact@joaomarcuslf.com<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>
@@ -927,7 +927,7 @@ contact@joaomarcuslf.com<!DOCTYPE html>
                 em certas implementações, por isso não irei abordar como
                 funciona DB locais, DB gerais, e etc. Caso surja curiosidade
                 tente analisar o código acima, e em caso de dúvidas você pode
-                <a href="#" onclick="mailMe('jmarcusfernandes@gmail.com')"
+                <a href="#" onclick="mailMe('contact@joaomarcuslf.com')"
                   >entrar em contato comigo</a
                 >.
               </p>
