--- a/public/resume.html
+++ b/public/resume.html
@@ -1,4 +1,4 @@
-contact@joaomarcuslf.com<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Resume – João Marcus de Lemos Fernandes</title>
@@ -71,8 +71,8 @@ contact@joaomarcuslf.com<!DOCTYPE html>
           <p class="pl-1"><strong>Mobile:</strong> (21) 98843-2606</p>
           <p class="pl-1">
             <strong>E-mail:</strong>
-            <a href="mailto:jmarcusfernandes@gmail.com"
-              >jmarcusfernandes@gmail.com</a
+            <a href="mailto:contact@joaomarcuslf.com"
+              >contact@joaomarcuslf.com</a
             >
           </p>
           <p class="pl-1">
